--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,30 +21,35 @@
   <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
     <tr style="padding:0px">
       <td style="padding:0px">
+        
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr style="padding:0px">
-            <td style="padding:2.5%;width:60%;vertical-align:middle">
+            <td style="padding:2.5%;width:50%;vertical-align:middle">
               <h1>
-                Leonid Keselman
+                Junrui Liu | 刘均锐
               </h1>
-              <p>I am a PhD student at the <a href="https://www.ri.cmu.edu/">Robotics Institute</a>, part of the <a href="https://www.scs.cmu.edu/">School of Computer Science</a> at <a href="https://www.cmu.edu/">Carnegie Mellon University</a>, where I work on 3D computer vision. My PhD advisor is <a href="http://www.cs.cmu.edu/~hebert/">Martial Hebert</a>.
+              <p>I am a first-year Computer Science PhD student at <a href="https://www.ucsb.edu/">UC Santa Barbara</a>, studying program verification and synthesis. I am fortunate to be advised by Prof. <a href="https://fredfeng.github.io/">Yu Feng</a>.
               </p>
               <p>
-                From 2011 to 2017, I worked at <a href="https://www.intel.com">Intel</a>, as part of <a href="https://www.intelrealsense.com/">Intel RealSense</a>. I primarily designed computer vision algorithms for efficient hardware ASICs, including the Intel RealSense <a href="https://software.intel.com/en-us/articles/realsense-r200-camera">R200</a> and <a href="https://software.intel.com/en-us/realsense/d400">D400</a> RGB-D sensors. Additionally, I worked on <a href="https://github.com/IntelRealSense/librealsense">software APIs</a>, <a href="https://patents.google.com/patent/US9992474B2">active illumination systems</a>, <a href="https://patents.google.com/patent/US9304597">human-computer interaction devices</a>, and helped develop demos for trade shows, including CES 2012-2016.
+                
               </p>
               <p>
-                I have an MS in Computer Science (AI focus) from <a href="http://cs.stanford.edu">Stanford University</a>, where I was a research assistant for <a href="http://svl.stanford.edu/">Silvio Savarese</a> and a teaching assistant for <a href="http://svl.stanford.edu/">Fei-Fei Li</a> (<a href="http://vision.stanford.edu/teaching/cs131_fall1617/">CS131</a> & <a href="http://cs231n.stanford.edu/2017/">CS231N</a>). I have a BS in EECS from <a href="http://www.eecs.berkeley.edu/">UC Berkeley</a>, where I worked in <a href="https://people.eecs.berkeley.edu/~pister/">Kris Pister's</a> lab.
+                I received my undergraduate degree from Vassar College, and my M.S. from Yale University.
               </p>
               <p style="text-align:center">
-                <a target="_blank" href="https://mailhide.io/e/B8TyS"> Email</a> &nbsp;/&nbsp;
-                <a href="https://github.com/leonidk">GitHub</a> &nbsp;/&nbsp;
-                <a href="https://scholar.google.com/citations?user=GCYG4GoAAAAJ">Google Scholar</a> &nbsp;/&nbsp;
-                <a href="https://www.linkedin.com/in/lkeselman"> LinkedIn </a>
+                <a target="_blank" href="https://mailhide.io/en/e/qzWe0mau">Email</a> &nbsp;/&nbsp;
+                <a href="https://github.com/junrui-liu">GitHub</a>
+                &nbsp;/&nbsp;
+                <!-- <a href="https://scholar.google.com/citations?user=GCYG4GoAAAAJ">Google Scholar</a> &nbsp;/&nbsp; -->
+                <a href="https://www.linkedin.com/in/junrui-liu/"> LinkedIn </a>
+                <!-- &nbsp;/&nbsp;
+                <a href="https://junrui-liu.github.io"> CV </a> -->
               </p>
             </td>
-            <td style="padding:2.5%;width:40%;max-width:40%">
-              <img style="width:100%;max-width:100%" alt="profile photo" src="images/circle_bw_crop.jpg">
+            <td style="padding:2.5%;width:20%;max-width:30%">
+              <img style="width:100%;max-width:100%" alt="profile photo" src="images/profile0.png">
             </td>
+            
           </tr>
         </table>
 
@@ -52,9 +57,6 @@
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Research</h2>
-              <p>
-                I'm interested in computer vision, machine learning, optimization, graphics and robotics.
-              </p>
             </td>
           </tr>
         </table>
@@ -64,16 +66,20 @@
           {% for cat in post.categories %}
           {% if cat == 'research' %}
           <tr>
-            <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px">
-              <img src="/tn{{post.image}}" alt="project image" style="width:auto; height:auto; max-width:100%;" />
-            </td>
             <td style="padding:2.5%;width:75%;vertical-align:middle">
-              <h3>{{post.title}}</h3>
+              <h3>
+              {% if post.pdf %}
+              <a href="{{post.pdf}}">{{post.title}}</a>
+              {% else %}
+              <a href="https://junrui-liu.github.io">{{post.title}}</a>
+              {% endif %}
+            </h3>
               <br>
               {{post.authors}}
 
               <br>
-              <em>{{post.venue}}</em>, {{ post.date | date: "%Y" }}
+              <em>{{post.venue}}</em>
+              <!-- , {{ post.date | date: "%Y" }} -->
               <br>
               {% if post.arxiv %}
               <a href="{{post.arxiv}}">arxiv</a> /
@@ -91,17 +97,34 @@
               <a href="{{post.slides}}">slides</a> /
               {% endif %}
               <p></p>
-              {{ post.excerpt }}
+              <!-- {{ post.excerpt }} -->
             </td>
           </tr>
           {% endif %}
           {% endfor %}
           {% endfor %}
         </table>
-        <br>
-        <br>
-        <br>
+
+        <!-- <br> -->
+
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+          <tr>
+            <td style="padding:2.5%;width:100%;vertical-align:middle">
+              <h2>Past TA</h2>
+              <!-- <p>
+                I'm interested in ...
+              </p> -->
+            </td>
+          </tr>
+        </table>
+        <ul>
+          <li>CS160: Translation of Computer Programs (<a href="https://github.com/fredfeng/CS160">Fall 2021</a>)</li>
+        </ul>
+        <br>
+        <br>
+        <br>
+
+        <!-- <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Intel Projects</h2>
@@ -231,14 +254,17 @@
           {% endif %}
           {% endfor %}
           {% endfor %}
-        </table>
+        </table> -->
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
             <td style="padding:0px">
               <br>
               <p style="text-align:center;font-size:small;">
-                Design and source code from <a style="font-size:small;" href="https://jonbarron.info">Jon Barron's website</a>
+                Design and source code from 
+                <a style="font-size:small;" href="https://github.com/leonidk/new_website">[1]</a>
+                and 
+                <a style="font-size:small;" href="https://jonbarron.info/">[2]</a>
               </p>
             </td>
           </tr>
