Change default url for non-existent files

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,7 +71,7 @@
               {% if post.pdf %}
               <a href="{{post.pdf}}">{{post.title}}</a>
               {% else %}
-              <a href="https://junrui-liu.github.io/#">{{post.title}}</a>
+              <a href="{{site.url}}/#">{{post.title}}</a>
               {% endif %}
             </h3>
               <br>
