--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -121,6 +121,7 @@
         </table>
         <ul>
           <li>CS160: Translation of Computer Programs (<a href="https://github.com/fredfeng/CS160">Fall 2021</a>)</li>
+          <li>CS162: Programming Languages (<a href="https://github.com/fredfeng/CS162">Winter 2022</a>)</li>
         </ul>
         <br>
         <br>
