--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,9 +28,9 @@
           <tr style="padding:0px">
             <td style="padding:2%;width:50%;vertical-align:middle">
               <h1>
-                Junrui Liu | 刘均锐
+                Junrui Liu
               </h1>
-              <p>I am a first-year Computer Science PhD student at <a href="https://www.ucsb.edu/">UC Santa Barbara</a>, studying program verification and synthesis. I am fortunate to be advised by Prof. <a href="https://fredfeng.github.io/">Yu Feng</a>.
+              <p>I am a second-year PhD student studying computer science at <a href="https://www.ucsb.edu/">UC Santa Barbara</a>, advised by Professor <a href="https://fredfeng.github.io/">Yu Feng</a>. I am interested in program verification and synthesis. 
               </p>
               <p>
                 
@@ -89,6 +89,7 @@
               <em>{{post.venue}}</em>
               <!-- , {{ post.date | date: "%Y" }} -->
               <br>
+              <!-- 
               {% if post.arxiv %}
               <a href="{{post.arxiv}}">arxiv</a> /
               {% endif %}
@@ -104,6 +105,7 @@
               {% if post.slides %}
               <a href="{{post.slides}}">slides</a> /
               {% endif %}
+            -->
               <p></p>
               <!-- {{ post.excerpt }} -->
             </td>
@@ -126,8 +128,8 @@
           </tr>
         </table>
         <ul>
-          <li>CS160: Translation of Computer Programs (<a href="https://github.com/fredfeng/CS160">Fall 2021</a>)</li>
-          <li>CS162: Programming Languages (<a href="https://github.com/fredfeng/CS162">Winter 2022</a>)</li>
+          <li>CS160: Translation of Computer Programs (<a href="https://github.com/fredfeng/CS160/tree/fall-2021">Fall'21</a>, <a href="https://github.com/fredfeng/CS160/">Spring'23</a>)</li>
+          <li>CS162: Programming Languages (<a href="https://github.com/fredfeng/CS162/tree/winter-2022">Winter'22</a>, <a href="https://github.com/fredfeng/CS162/tree/winter-2022">Winter'23</a>)</li>
         </ul>
         <br>
 
@@ -142,7 +144,8 @@
           </tr>
         </table>
         <ul>
-          <li>Solver-aided chorale composition (<a href="/pdfs/choco.pdf">poster</a>)</li>
+          <li>Outstanding Teaching Assistant in Computer Science (<a href="https://engineering.ucsb.edu/news/class-2023-selects-teaching-assistants-year">link</a>)</li>
+          <li>Solver-Aided Chorale Composition (<a href="/pdfs/choco.pdf">poster</a>)</li>
         </ul>
         <br>
         <br>
