--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,9 +33,9 @@
               <h1>
                 Junrui Liu
               </h1>
-              <p>I am a third-year PhD student studying computer science at <a href="https://www.ucsb.edu/">UC Santa
+              <p>I am a fourth-year PhD student studying computer science at <a href="https://www.ucsb.edu/">UC Santa
                   Barbara</a>, advised by Professor <a href="https://fredfeng.github.io/">Yu Feng</a>. I am interested
-                in program verification and synthesis.
+                in all things related to programming languages, especially in verification and synthesis.
               </p>
               <p>
 
@@ -65,7 +65,7 @@
           style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
             <td style="padding:2%;padding-top:0%;padding-bottom:0%;width:100%;vertical-align:middle">
-              <h2>Research</h2>
+              <h2>Publications</h2>
             </td>
           </tr>
           <tr>
@@ -83,8 +83,8 @@
           <tr>
             <td style="padding:2%;padding-top:0%;padding-bottom:0%;width:75%;vertical-align:middle">
               <h3>
-                {% if post.pdf %}
-                <a href="{{post.pdf}}">{{post.title}}</a>
+                {% if post.doi %}
+                <a href="{{post.doi}}">{{post.title}}</a>
                 {% else %}
                 <a href="{{site.url}}/#">{{post.title}}</a>
                 {% endif %}
@@ -132,180 +132,74 @@
               <!-- <p>
                 I'm interested in ...
               </p> -->
+
+              <p>
+              <h3>Awards</h3>
+              <ul>
+                <li><a href="https://engineering.ucsb.edu/news/class-2024-selects-teaching-assistants-year">Outstanding
+                    Teaching Assistant in Computer Science (2024)</a>
+                <li><a href="https://engineering.ucsb.edu/news/class-2023-selects-teaching-assistants-year">Outstanding
+                    Teaching Assistant in Computer Science (2023)</a>
+                </li>
+              </ul>
+
+
+              <h3>Co-instructor</h3>
+              <ul>
+                <li><a href="https://github.com/fredfeng/CS292C/">CS292C - Computer-Aided Reasoning for
+                    Software</a> (Spring'24)
+                </li>
+              </ul>
+
+              <h3>Teaching assistant</h3>
+              <ul>
+                <li><a href="https://github.com/fredfeng/CS162/tree/winter-2022">CS162: Programming
+                    Languages</a>
+                  (Winter'24,
+                  Winter'22, Winter'23)
+                </li>
+                <li><a href="https://github.com/fredfeng/CS160">CS160: Translation of Computer
+                    Programs</a> (Spring'23,
+                  Fall'21)
+                </li>
+                <li><a href="https://github.com/fredfeng/CS190-blockchain">CS190J: Blockchain
+                    Technologies and Security</a> (Spring'24)
+                </li>
+              </ul>
+              </p>
             </td>
           </tr>
         </table>
-        <ul>
-          <li><a href="https://engineering.ucsb.edu/news/class-2023-selects-teaching-assistants-year">College of
-              Engineering Outstanding
-              Teaching Assistant in Computer Science</a>
-          </li>
-          <li>Co-instructor: <a href="https://github.com/fredfeng/CS292C/">CS292C - Computer-Aided Reasoning for
-              Software</a> (Spring'24)
-          </li>
-          <li>Teaching assistant: <a href="https://github.com/fredfeng/CS162/tree/winter-2022">CS162 - Programming
-              Languages</a>
-            (Winter'24,
-            Winter'22, Winter'23)
-          </li>
-          <li>Teaching assistant: <a href="https://github.com/fredfeng/CS160">CS160 - Translation of Computer
-              Programs</a> (Spring'23,
-            Fall'21)
-          </li>
-          <li>Teaching assistant: <a href="https://github.com/fredfeng/CS190-blockchain">CS190J - Blockchain
-              Technologies and Security</a> (Spring'24)
-          </li>
-        </ul>
         <br>
+
 
         <table style="
               width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
             <td style="padding:2%;padding-bottom:0%;width:100%;vertical-align:middle">
-              <h2>Stuff</h2>
+              <h2>Personal</h2>
               <!-- <p>
                 I'm interested in ...
               </p> -->
-            </td>
-          </tr>
-        </table>
-        <ul>
-          <li>Solver-Aided Chorale Composition (<a href="/pdfs/choco.pdf">poster</a>)</li>
-        </ul>
-        <br>
-        <br>
-
-        <!-- <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
-          <tr>
-            <td style="padding:2%;width:100%;vertical-align:middle">
-              <h2>Intel Projects</h2>
-              <p>Besides my work on the RealSense depth sensors and the publications above, a sampling of my publicly disclosed work
+              <p>I enjoy playing music. I'm studying <a
+                  href="https://music.ucsb.edu/participate/ensembles/carillon">carillon</a>
+                with <a href="https://music.ucsb.edu/people/faculty/wesley-arai">Wesley Arai</a>. As an undergrad at
+                Vassar
+                College, I studied
+                organ with <a href="http://www.gailarcher.com/artist.html">Gail Archer</a>.</p>
+              <p>
+                I am a modest weeb. I enjoy お笑い,
+                ラジオ, and reading Murakami. Here's my anime <a href="/images/3by3.png">3x3</a>.
               </p>
+              <p>
+                Random stuff: Solver-Aided Chorale Composition (<a href="/pdfs/choco.pdf">poster</a>)</p>
             </td>
           </tr>
         </table>
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
 
-          {% for post in site.posts %}
-          {% for cat in post.categories %}
-          {% if cat == 'Intel' %}
-          <tr>
-            <td style="padding:2%;width:25%;vertical-align:middle;min-width:120px">
-              <img src="/tn{{post.image}}" alt="project image" style="width:auto; height:auto; max-width:100%;" />
-            </td>
-            <td style="padding:2%;width:75%;vertical-align:middle">
-              <h3>{{post.title}}</h3>
-              <br>
-              <em>{{post.categories}} {{post.course}}</em>
-              <br>
-              {{ post.date | date: "%Y-%m-%d" }}
 
-              <br>
-              {% if post.website %}
-              <a href="{{post.website}}">website</a> /
-              {% endif %}
-              {% if post.paper %}
-              <a href="{{post.paper}}">paper</a> /
-              {% endif %}
-              {% if post.patent %}
-              <a href="{{post.patent}}">patent</a> /
-              {% endif %}
-              {% if post.patent2 %}
-              <a href="{{post.patent2}}">patent #2</a> /
-              {% endif %}
-              {% if post.patent3 %}
-              <a href="{{post.patent3}}">patent #3</a> /
-              {% endif %}
-              {% if post.video %}
-              <a href="{{post.video}}">video</a> /
-              {% endif %}
-              {% if post.video2 %}
-              <a href="{{post.video2}}">video #2</a> /
-              {% endif %}
-              {% if post.code %}
-              <a href="{{post.code}}">code</a> /
-              {% endif %}
-              {% if post.poster %}
-              <a href="{{post.poster}}">poster</a> /
-              {% endif %}
-              {% if post.slides %}
-              <a href="{{post.slides}}">slides</a> /
-              {% endif %}
-              <p></p>
-              {{ post.excerpt }}
-            </td>
-          </tr>
-          {% endif %}
-          {% endfor %}
-          {% endfor %}
-        </table>
         <br>
         <br>
-        <br>
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
-          <tr>
-            <td style="padding:2%;width:100%;vertical-align:middle">
-              <h2>Other Projects</h2>
-              <p> These include coursework, side projects and unpublished research work. 
-              </p>
-            </td>
-          </tr>
-        </table>
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
-
-          {% for post in site.posts %}
-          {% for cat in post.categories %}
-          {% if cat != 'research' and cat != 'Intel' %}
-          <tr>
-            <td style="padding:2%;width:25%;vertical-align:middle;min-width:120px">
-              <img src="/tn{{post.image}}" alt="project image" style="width:auto; height:auto; max-width:100%;" />
-            </td>
-            <td style="padding:2%;width:75%;vertical-align:middle">
-              <h3>{{post.title}}</h3>
-              <br>
-              <em>{{post.categories}} {{post.course}}</em>
-              <br>
-              {{ post.date | date: "%Y-%m-%d" }}
-
-              <br>
-              {% if post.website %}
-              <a href="{{post.website}}">website</a> /
-              {% endif %}
-              {% if post.paper %}
-              <a href="{{post.paper}}">paper</a> /
-              {% endif %}
-              {% if post.patent %}
-              <a href="{{post.patent}}">patent</a> /
-              {% endif %}
-              {% if post.patent2 %}
-              <a href="{{post.patent2}}">patent #2</a> /
-              {% endif %}
-              {% if post.patent3 %}
-              <a href="{{post.patent3}}">patent #3</a> /
-              {% endif %}
-              {% if post.video %}
-              <a href="{{post.video}}">video</a> /
-              {% endif %}
-              {% if post.video2 %}
-              <a href="{{post.video2}}">video #2</a> /
-              {% endif %}
-              {% if post.code %}
-              <a href="{{post.code}}">code</a> /
-              {% endif %}
-              {% if post.poster %}
-              <a href="{{post.poster}}">poster</a> /
-              {% endif %}
-              {% if post.slides %}
-              <a href="{{post.slides}}">slides</a> /
-              {% endif %}
-              <p></p>
-              {{ post.excerpt }}
-            </td>
-          </tr>
-          {% endif %}
-          {% endfor %}
-          {% endfor %}
-        </table> -->
 
         <table
           style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
