--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,7 +65,7 @@
           style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
             <td style="padding:2%;padding-top:0%;padding-bottom:0%;width:100%;vertical-align:middle">
-              <h2>Publications</h2>
+              <h2>Publications & Manuscripts</h2>
             </td>
           </tr>
           <tr>
@@ -170,6 +170,28 @@
             </td>
           </tr>
         </table>
+        <br>
+
+        <table style="
+              width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+          <tr>
+            <td style="padding:2%;padding-bottom:0%;width:100%;vertical-align:middle">
+              <h2>Talks & Tutorials</h2>
+              <!-- <p>
+                I'm interested in ...
+              </p> -->
+              <ul>
+                <li>Polymorphism, Curry-Howard, and Program Verification (guest lecture for CS162 @ UCSB)</li>
+                <li>Formal Verification for Zero-Knowledge Proofs (Applied ZK Workshop @ SBC'22)</li>
+                <li>Introduction to Interactive Theorem Proving in Coq (0xPARC Summer Residency 2022)</li>
+                <li>Refinement Types and Program Verification (guest lecture for CS162 @ UCSB)
+                </li>
+              </ul>
+            </td>
+          </tr>
+        </table>
+
+
         <br>
 
 
