--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
+  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/simplegrid.css" />
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet"
     type="text/css">
@@ -145,27 +146,103 @@
 
 
               <h3>Co-instructor</h3>
-              <ul>
-                <li><a href="https://github.com/fredfeng/CS292C/">CS292C - Computer-Aided Reasoning for
-                    Software</a> (Spring'24)
-                </li>
-              </ul>
+
+              <div class="grid grid-pad">
+                <div class="col-2-12">
+                  <div class="content">
+                    2024 Spring
+                  </div>
+                </div>
+                <div class="col-10-12">
+                  <div class="content">
+                    <a href="https://github.com/fredfeng/CS292C/">CS 292C: Computer-Aided Reasoning for
+                      Software</a>
+                  </div>
+                </div>
+              </div>
+
+              <br>
 
               <h3>Teaching assistant</h3>
-              <ul>
-                <li><a href="https://github.com/fredfeng/CS162/tree/winter-2022">CS162: Programming
-                    Languages</a>
-                  (Winter'24,
-                  Winter'22, Winter'23)
-                </li>
-                <li><a href="https://github.com/fredfeng/CS160">CS160: Translation of Computer
-                    Programs</a> (Spring'23,
-                  Fall'21)
-                </li>
-                <li><a href="https://github.com/fredfeng/CS190-blockchain">CS190J: Blockchain
-                    Technologies and Security</a> (Spring'24)
-                </li>
-              </ul>
+
+              <div class="grid grid-pad">
+                <div class="col-2-12">
+                  <div class="content">
+                    2024 Spring
+                  </div>
+                </div>
+                <div class="col-10-12">
+                  <div class="content">
+                    <a href="https://github.com/fredfeng/CS 190-blockchain">CS 190J: Blockchain
+                      Technologies and Security</a>
+                  </div>
+                </div>
+                <div class="col-2-12">
+                  <div class="content">
+                    2024 Winter
+                  </div>
+                </div>
+                <div class="col-10-12">
+                  <div class="content">
+                    <a href="https://github.com/fredfeng/CS 162">CS 162: Programming Languages</a>
+                  </div>
+                </div>
+                <div class="col-2-12">
+                  <div class="content">
+                    2023 Spring
+                  </div>
+                </div>
+                <div class="col-10-12">
+                  <div class="content">
+                    <a href="https://github.com/fredfeng/CS 160">CS 160: Compilers </a>
+                  </div>
+                </div>
+                <div class="col-2-12">
+                  <div class="content">
+                    2023 Winter
+                  </div>
+                </div>
+                <div class="col-10-12">
+                  <div class="content">
+                    <a href="https://github.com/fredfeng/CS 162/tree/winter-2023">CS 162: Programming Languages</a>
+                  </div>
+                </div>
+                <div class="col-2-12">
+                  <div class="content">
+                    2022 Winter
+                  </div>
+                </div>
+                <div class="col-10-12">
+                  <div class="content">
+                    <a href="https://github.com/fredfeng/CS 162/tree/winter-2022">CS 162: Programming Languages</a>
+                  </div>
+                </div>
+
+                <div class="col-2-12">
+                  <div class="content">
+                    2021 Fall
+                  </div>
+                </div>
+                <div class="col-10-12">
+                  <div class="content">
+                    <a href="https://github.com/fredfeng/CS 160/tree/fall-2021">CS 160: Compilers</a>
+                  </div>
+                </div>
+
+                <div class="col-2-12">
+                  <div class="content">
+                    2018 Spring
+                  </div>
+                </div>
+                <div class="col-10-12">
+                  <div class="content">
+                    <a href="https://catalogue.vassar.edu/preview_course.php?catoid=13&coid=105247">PHIL 125: Logic</a>
+                    (Vassar)
+                  </div>
+                </div>
+
+              </div>
+
               </p>
             </td>
           </tr>
