--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,7 +71,7 @@
           </tr>
           <tr>
             <td style="padding:2%;padding-top:0%;padding-bottom:0%;width:100%;vertical-align:middle">
-              <p>(⁺ means equal contribution)</p>
+              <p>(+ means equal contribution)</p>
             </td>
           </tr>
         </table>
