--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -173,7 +173,7 @@
                 </div>
                 <div class="col-10-12">
                   <div class="content">
-                    <a href="https://github.com/fredfeng/CS 190-blockchain">CS 190J: Blockchain
+                    <a href="https://github.com/fredfeng/CS190-blockchain">CS 190J: Blockchain
                       Technologies and Security</a>
                   </div>
                 </div>
@@ -184,7 +184,7 @@
                 </div>
                 <div class="col-10-12">
                   <div class="content">
-                    <a href="https://github.com/fredfeng/CS 162">CS 162: Programming Languages</a>
+                    <a href="https://github.com/fredfeng/CS162">CS 162: Programming Languages</a>
                   </div>
                 </div>
                 <div class="col-2-12">
@@ -194,7 +194,7 @@
                 </div>
                 <div class="col-10-12">
                   <div class="content">
-                    <a href="https://github.com/fredfeng/CS 160">CS 160: Compilers </a>
+                    <a href="https://github.com/fredfeng/CS160">CS 160: Compilers </a>
                   </div>
                 </div>
                 <div class="col-2-12">
@@ -204,7 +204,7 @@
                 </div>
                 <div class="col-10-12">
                   <div class="content">
-                    <a href="https://github.com/fredfeng/CS 162/tree/winter-2023">CS 162: Programming Languages</a>
+                    <a href="https://github.com/fredfeng/CS162/tree/winter-2023">CS 162: Programming Languages</a>
                   </div>
                 </div>
                 <div class="col-2-12">
@@ -214,7 +214,7 @@
                 </div>
                 <div class="col-10-12">
                   <div class="content">
-                    <a href="https://github.com/fredfeng/CS 162/tree/winter-2022">CS 162: Programming Languages</a>
+                    <a href="https://github.com/fredfeng/CS162/tree/winter-2022">CS 162: Programming Languages</a>
                   </div>
                 </div>
 
@@ -225,7 +225,7 @@
                 </div>
                 <div class="col-10-12">
                   <div class="content">
-                    <a href="https://github.com/fredfeng/CS 160/tree/fall-2021">CS 160: Compilers</a>
+                    <a href="https://github.com/fredfeng/CS160/tree/fall-2021">CS 160: Compilers</a>
                   </div>
                 </div>
 
