--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -135,6 +135,7 @@
               </p> -->
 
               <p>
+
               <h3>Awards</h3>
               <ul>
                 <li><a href="https://engineering.ucsb.edu/news/class-2024-selects-teaching-assistants-year">Outstanding
@@ -168,6 +169,16 @@
               <div class="grid grid-pad">
                 <div class="col-2-12">
                   <div class="content">
+                    2025 Winter
+                  </div>
+                </div>
+                <div class="col-10-12">
+                  <div class="content">
+                    <a href="https://github.com/fredfeng/CS162">CS 162: Programming Languages</a>
+                  </div>
+                </div>
+                <div class="col-2-12">
+                  <div class="content">
                     2024 Spring
                   </div>
                 </div>
@@ -184,7 +195,7 @@
                 </div>
                 <div class="col-10-12">
                   <div class="content">
-                    <a href="https://github.com/fredfeng/CS162">CS 162: Programming Languages</a>
+                    <a href="https://github.com/fredfeng/CS162/tree/winter-2024">CS 162: Programming Languages</a>
                   </div>
                 </div>
                 <div class="col-2-12">
@@ -280,12 +291,10 @@
               <!-- <p>
                 I'm interested in ...
               </p> -->
-              <p>I enjoy playing music. I'm studying <a
-                  href="https://music.ucsb.edu/participate/ensembles/carillon">carillon</a>
-                with <a href="https://music.ucsb.edu/people/faculty/wesley-arai">Wesley Arai</a>. As an undergrad at
-                Vassar
-                College, I studied
-                organ with <a href="http://www.gailarcher.com/artist.html">Gail Archer</a>.</p>
+              <p>I enjoy playing music, and am currently studying the <a
+                  href='https://music.ucsb.edu/participate/ensembles/carillon'>carillon</a> with <a
+                  href='https://music.ucsb.edu/people/faculty/wesley-arai'>Wesley Arai</a>. During my undergraduate
+                studies, I studied organ with <a href='http://www.gailarcher.com/artist.html'>Gail Archer</a>.</p>
               <p>
                 Random stuff: Solver-Aided Chorale Composition (<a href="/pdfs/choco.pdf">poster</a>)</p>
             </td>
