--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -297,6 +297,16 @@
                 studies, I studied organ with <a href='http://www.gailarcher.com/artist.html'>Gail Archer</a>.</p>
               <p>
                 Random stuff: Solver-Aided Chorale Composition (<a href="/pdfs/choco.pdf">poster</a>)</p>
+              <p>
+                I'm a moderate weeb and speak Japanese (not jyōzu).
+                <a href="/images/3by3.jpg">Here</a> are
+                <a href="https://www.youtube.com/@sissonnelive/videos">some</a>
+                <a href="https://www.youtube.com/channel/UConIcs8o0z5vYTamGtq-Lsw/videos">of</a> <a
+                  href="https://www.youtube.com/@%E3%83%A9%E3%83%BC%E3%83%A1%E3%83%B3%E3%82%BA%E5%85%AC%E5%BC%8F/videos">my</a>
+                <a href="https://harukimurakami.com/books/">favoraite pieces</a> of
+                <a href="https://youtube.com/playlist?list=PLYpJvGKpl7tao5DG9RIaNpj9kyjv8irCV&si=j2ElqqSnmbupkc5Y">Japanese
+                  media</a> to consume.
+              </p>
             </td>
           </tr>
         </table>
