--- a/style.scss
+++ b/style.scss
@@ -20,7 +20,8 @@ a {
 a:focus,
 a:hover {
   color: #f09228;
-  text-decoration: none;
+  text-decoration:underline;
+text-decoration-style: dotted;
 }
 
 body,
