--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
               <h1>
                 Junrui Liu
               </h1>
-              <p>I am a fourth-year PhD student studying computer science at <a href="https://www.ucsb.edu/">UC Santa
+              <p>I am a fourth-year Computer Science PhD student at <a href="https://www.ucsb.edu/">UC Santa
                   Barbara</a>, advised by Professor <a href="https://fredfeng.github.io/">Yu Feng</a>. I am interested
                 in all things related to programming languages, especially in verification and synthesis.
               </p>
