--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -293,8 +293,8 @@
               </p> -->
               <p>I enjoy playing music, and am currently studying the <a
                   href='https://music.ucsb.edu/participate/ensembles/carillon'>carillon</a> with <a
-                  href='https://music.ucsb.edu/people/faculty/wesley-arai'>Wesley Arai</a>. During my undergraduate
-                studies, I studied organ with <a href='http://www.gailarcher.com/artist.html'>Gail Archer</a>.</p>
+                  href='https://music.ucsb.edu/people/faculty/wesley-arai'>Wesley Arai</a>. Previously, I studied organ
+                with <a href='http://www.gailarcher.com/artist.html'>Gail Archer</a>.</p>
               <p>
                 Random stuff: Solver-Aided Chorale Composition (<a href="/pdfs/choco.pdf">poster</a>)</p>
               <p>
