--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -298,13 +298,12 @@
               <p>
                 Random stuff: Solver-Aided Chorale Composition (<a href="/pdfs/choco.pdf">poster</a>)</p>
               <p>
-                I'm a moderate weeb and speak Japanese (not jyōzu).
-                <a href="/images/3by3.jpg">Here</a> are
-                <a href="https://www.youtube.com/@sissonnelive/videos">some</a>
-                <a href="https://www.youtube.com/channel/UConIcs8o0z5vYTamGtq-Lsw/videos">of</a> my
-                <a href="https://harukimurakami.com/books/">favoraite pieces</a> of
-                <a href="https://youtube.com/playlist?list=PLYpJvGKpl7tao5DG9RIaNpj9kyjv8irCV&si=j2ElqqSnmbupkc5Y">Japanese
-                  media</a> to consume.
+                I'm a moderate weeb and speak Japanese (not jyozu).
+                I enjoy watching <a href="https://www.youtube.com/@sissonnelive/videos">owarai</a> and
+                <a href="/images/3by3.jpg">anime</a>,
+                listening to <a
+                  href="https://youtube.com/playlist?list=PLYpJvGKpl7tao5DG9RIaNpj9kyjv8irCV&si=j2ElqqSnmbupkc5Y">radio</a>,
+                and reading Murakami.
               </p>
             </td>
           </tr>
