--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -145,6 +145,23 @@
                 </li>
               </ul>
 
+              <h3>Instructor</h3>
+
+              <div class="grid grid-pad">
+                <div class="col-2-12">
+                  <div class="content">
+                    2025 Summer
+                  </div>
+                </div>
+                <div class="col-10-12">
+                  <div class="content">
+                    <a href="">CS 162: Programming Languages</a>
+                  </div>
+                </div>
+              </div>
+
+              <br>
+
 
               <h3>Co-instructor</h3>
 
@@ -167,6 +184,16 @@
               <h3>Teaching assistant</h3>
 
               <div class="grid grid-pad">
+                <div class="col-2-12">
+                  <div class="content">
+                    2025 Spring
+                  </div>
+                </div>
+                <div class="col-10-12">
+                  <div class="content">
+                    <a href="">CS 160: Compilers</a>
+                  </div>
+                </div>
                 <div class="col-2-12">
                   <div class="content">
                     2025 Winter
