--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -158,14 +158,6 @@
                     <a href="">CS 162: Programming Languages</a>
                   </div>
                 </div>
-              </div>
-
-              <br>
-
-
-              <h3>Co-instructor</h3>
-
-              <div class="grid grid-pad">
                 <div class="col-2-12">
                   <div class="content">
                     2024 Spring
@@ -174,14 +166,16 @@
                 <div class="col-10-12">
                   <div class="content">
                     <a href="https://github.com/fredfeng/CS292C/">CS 292C: Computer-Aided Reasoning for
-                      Software</a>
+                      Software</a> (co-taught with Yu Feng)
                   </div>
                 </div>
               </div>
 
               <br>
 
-              <h3>Teaching assistant</h3>
+
+
+              <h3>Teaching Assistant</h3>
 
               <div class="grid grid-pad">
                 <div class="col-2-12">
