--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -313,8 +313,11 @@
                 I'm interested in ...
               </p> -->
               <p>I enjoy playing music, and am currently studying the <a
-                  href='https://music.ucsb.edu/participate/ensembles/carillon'>carillon</a> with <a
-                  href='https://music.ucsb.edu/people/faculty/wesley-arai'>Wesley Arai</a>. Previously, I studied organ
+                  href='https://www.gcna.org/about-carillons'>carillon</a> with <a
+                  href='https://music.ucsb.edu/people/faculty/wesley-arai'>Wesley Arai</a>. I occasionally post
+                my progress videos <a href="https://www.youtube.com/@roly4301">here</a>.
+                Previously, I
+                studied organ
                 with <a href='http://www.gailarcher.com/artist.html'>Gail Archer</a>.</p>
               <p>
                 Random stuff: Solver-Aided Chorale Composition (<a href="/pdfs/choco.pdf">poster</a>)</p>
