--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -155,7 +155,7 @@
                 </div>
                 <div class="col-10-12">
                   <div class="content">
-                    <a href="">CS 162: Programming Languages</a>
+                    CS 162: Programming Languages <a href="https://junrui-liu.github.io/cs162">🚧</a>
                   </div>
                 </div>
                 <div class="col-2-12">
@@ -185,7 +185,7 @@
                 </div>
                 <div class="col-10-12">
                   <div class="content">
-                    <a href="">CS 160: Compilers</a>
+                    <a href="https://ucsb.instructure.com/courses/26675">CS 160: Compilers</a>
                   </div>
                 </div>
                 <div class="col-2-12">
@@ -316,9 +316,7 @@
                   href='https://www.gcna.org/about-carillons'>carillon</a> with <a
                   href='https://music.ucsb.edu/people/faculty/wesley-arai'>Wesley Arai</a>. I occasionally post
                 my progress videos <a href="https://www.youtube.com/@roly4301">here</a>.
-                Previously, I
-                studied organ
-                with <a href='http://www.gailarcher.com/artist.html'>Gail Archer</a>.</p>
+                Previously, Istudied organ with <a href='http://www.gailarcher.com/artist.html'>Gail Archer</a>.</p>
               <p>
                 Random stuff: Solver-Aided Chorale Composition (<a href="/pdfs/choco.pdf">poster</a>)</p>
               <p>
