--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -322,7 +322,7 @@
               <p>
                 I'm a moderate weeb and speak Japanese (not jyozu).
                 I enjoy watching <a href="https://www.youtube.com/@sissonnelive/videos">owarai</a> and
-                <a href="/images/3by3.jpg">anime</a>,
+                <a href="/images/3x3.jpg">anime</a>,
                 listening to <a
                   href="https://youtube.com/playlist?list=PLYpJvGKpl7tao5DG9RIaNpj9kyjv8irCV&si=j2ElqqSnmbupkc5Y">radio</a>,
                 and reading Murakami.
