--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -136,16 +136,26 @@
 
               <p>
 
-              <h3>Awards</h3>
+              <h3>Awards 🏆</h3>
               <ul>
                 <li><a href="https://engineering.ucsb.edu/news/class-2024-selects-teaching-assistants-year">Outstanding
-                    Teaching Assistant in Computer Science (2024)</a>
+                    Teaching Assistant in Computer Science (2024)</a></li>
                 <li><a href="https://engineering.ucsb.edu/news/class-2023-selects-teaching-assistants-year">Outstanding
-                    Teaching Assistant in Computer Science (2023)</a>
+                    Teaching Assistant in Computer Science (2023)</a></li>
                 </li>
               </ul>
 
-              <h3>Instructor</h3>
+              <h3>Certificates ✅</h3>
+              <ul>
+                <li>(In progress) <a
+                    href="https://otl.ucsb.edu/graduate-students/ta-certificate-programs/ccut">Certificate in College
+                    and University Teaching (CCUT)</a></li>
+                <li>(In progress) <a href="https://otl.ucsb.edu/graduate-students/ta-certificate-programs/stia">Summer
+                    Teaching Institute for Associates (STIA)</a></li>
+                </li>
+              </ul>
+
+              <h3>Instructor 🧑‍🏫</h3>
 
               <div class="grid grid-pad">
                 <div class="col-2-12">
@@ -165,7 +175,7 @@
                 </div>
                 <div class="col-10-12">
                   <div class="content">
-                    <a href="https://github.com/fredfeng/CS292C/">CS 292C: Computer-Aided Reasoning for
+                    <a href="https://github.com/fredfeng/CS292C/tree/spring-2024">CS 292C: Computer-Aided Reasoning for
                       Software</a> (co-taught with Yu Feng)
                   </div>
                 </div>
@@ -175,7 +185,7 @@
 
 
 
-              <h3>Teaching Assistant</h3>
+              <h3>Teaching Assistant 🧑‍💻</h3>
 
               <div class="grid grid-pad">
                 <div class="col-2-12">
@@ -316,11 +326,10 @@
                   href='https://www.gcna.org/about-carillons'>carillon</a> with <a
                   href='https://music.ucsb.edu/people/faculty/wesley-arai'>Wesley Arai</a>. I occasionally post
                 my progress videos <a href="https://www.youtube.com/@roly4301">here</a>.
-                Previously, I studied organ with <a href='http://www.gailarcher.com/artist.html'>Gail Archer</a>.</p>
+                Previously, I studied organ with <a href='http://www.gailarcher.com/artist.html'>Gail Archer</a>.
+                Random stuff: Solver-Aided Chorale Composition (<a href="/pdfs/choco.pdf">poster</a>).</p>
               <p>
-                Random stuff: Solver-Aided Chorale Composition (<a href="/pdfs/choco.pdf">poster</a>)</p>
-              <p>
-                I'm a moderate weeb and speak Japanese (not jyozu).
+                I'm a moderate weeb and speak (not so jyozu) Japanese.
                 I enjoy watching <a href="https://www.youtube.com/@sissonnelive/videos">owarai</a> and
                 <a href="/images/3x3.jpg">anime</a>,
                 listening to <a
